# lease-lock

./: README.md  terms.json
anchor/: README.md  main.py  requirements.txt  start.py  test_anchor.py
anchor/.well-known/: stellar.toml
anchor/templates/: deposit.html  withdraw.html
client/: .env  README.md  config.env  env.example  requirements.txt
client/scripts/: 01_init_and_fund.py  02_pay_rent.py  03_create_deposit.py  04_claim_deposit.py  05_call_contract.py  06_auction_demo.py  DEMO_QUICKSTART.md  DEMO_README.md  check_balances.py  common.py  demo_lock_unlock.py  demo_mark_delinquent.py  demo_pay_rent.py  demo_post_reading.py  demo_setup_test_data.py  demo_simple_test.py  demo_split_utilities.py  fund_account.py  hash_terms.py  lease_api.py  simple_test.py  terms_hash_example.py  test_auction.py  test_auction_logic.py  test_lease_graph.py  tree_visualization.py  utilities_cost_split.py  utilities_oracle_read.py  utilities_oracle_write.py  (+1 more)
final-web-demo/: .replit  AUCTION_BLOCKCHAIN.md  DEPLOY_REPLIT.md  NEW_FEATURES.md  README.md  README_REPLIT.md  REAL_TRANSACTIONS.md  REDESIGN_NOTES.md  env.example  replit.nix  requirements.txt
leaselock/: package-lock.json
leaselock/contracts/auction/: Cargo.toml  README.md
leaselock/contracts/auction/src/: lib.rs
lock/: .env  .lock_state.json  README.md  config.env.example  demo.py  iot_lock_daemon.py  mock_lock_simple.py  requirements.txt  run_daemon.bat  run_daemon.sh  test_lock_system.py
web-demo/: AUCTION_INFO.md  DEPLOYMENT.md  FEATURES.md  README.md  TESTING.md  requirements.txt  run_local.py  vercel.json
(+23 files in other folders)
